Implemented strategy pattern + fixed ties +