@@ -8,8 +8,8 @@ import it.polimi.ingsw.codexnaturalis.model.exceptions.IllegalCommandException;
 import it.polimi.ingsw.codexnaturalis.model.game.Game;
 import it.polimi.ingsw.codexnaturalis.model.game.components.cards.Card;
 import it.polimi.ingsw.codexnaturalis.model.game.components.cards.ObjectiveCard;
-import it.polimi.ingsw.codexnaturalis.model.game.components.structure.Structure;
 import it.polimi.ingsw.codexnaturalis.model.game.player.Player;
+import it.polimi.ingsw.codexnaturalis.model.game.strategies.*;
 
 public class EndGameState extends State {
 
@@ -45,57 +45,152 @@ public class EndGameState extends State {
         throw new IllegalCommandException("Match has ended");
     }
 
+    /** This method's aim is to gather in a single data structure the pattern objective that a certain player could aspire to verify
+     * @param player the player I'm interested in
+     * @return the list of pattern objective cards available on the board and in the specific player's hand
+     */
+    private List<Card> gatherPatterns(Player player) {
+        List<Card> totPatterns = new ArrayList<>();
+
+        Card secretObjCard = super.game.getHandByPlayer(player).getSecretObjective();
+        String idSecretObj = secretObjCard.getIdCard();
+
+        if(idSecretObj.startsWith("OP")){
+            totPatterns.add(secretObjCard);
+        }
+
+        Card commonObj0 = super.game.getBoard().getCommonObjectives().getFirst();
+        String idCommonObj0 = commonObj0.getIdCard();
+        if (idCommonObj0.startsWith("OP")) {
+            totPatterns.add(commonObj0);
+        }
+        Card commonObj1 = super.game.getBoard().getCommonObjectives().get(1);
+        String idCommonObj1 = commonObj1.getIdCard();
+        if (idCommonObj1.startsWith("OP")) {
+            totPatterns.add(commonObj1);
+        }
+
+        return totPatterns;
+    }
+
+    /** This method's aim is to gather in a single data structure the totem objective that a certain player could aspire to verify
+     * @param player the player I'm interested in
+     * @return the list of totem objective cards available on the board and in the specific player's hand
+     */
+    private List<Card> gatherTotem (Player player){
+        List<Card> totPatterns = new ArrayList<>();
+
+
+        Card secretObjCard = super.game.getHandByPlayer(player).getSecretObjective();
+        String idSecretObj = secretObjCard.getIdCard();
+
+        if(idSecretObj.startsWith("OR")){
+            totPatterns.add(secretObjCard);
+        }
+
+        Card commonObj0 = super.game.getBoard().getCommonObjectives().getFirst();
+        String idCommonObj0 = commonObj0.getIdCard();
+        if (idCommonObj0.startsWith("OR")) {
+            totPatterns.add(commonObj0);
+        }
+        Card commonObj1 = super.game.getBoard().getCommonObjectives().get(1);
+        String idCommonObj1 = commonObj1.getIdCard();
+        if (idCommonObj1.startsWith("OR")) {
+            totPatterns.add(commonObj1);
+        }
+
+        return totPatterns;
+    }
+
+    // Fin'ora da endGameState viene chiamato il metodo di structure getpointsfromobjrescard.
+    // Noi vogliamo astrarci spostando getpointsfromobjrescard in game ovvero ponendo la strategia per risolvere
+    // il calcolo dei punti in una strategia concreta.
+
+    /**
+     * Builds a list containing at first the patterns and then the totem cards.
+     * For each of them the method is going to add a node in the game's strategyMap so that game could perform the computation being agnostic regarding the specific type of strategy to implement.
+     * @param player this map filling operation is made one player at a time so a single line of the table is actually updated.
+     */
+    private void setStrategies(Player player){
+        super.game.getStrategyMap().get(player).clear();
+        List<Card> gatheredObj = gatherPatterns(player);
+        gatheredObj.addAll(gatherTotem(player));
+
+        for(Card card: gatheredObj){
+            switch(card.getIdCard()){
+                case "OP1": super.game.getStrategyMap().get(player).add(new ConcreteOP1());
+                case "OP2": super.game.getStrategyMap().get(player).add(new ConcreteOP2());
+                case "OP3": super.game.getStrategyMap().get(player).add(new ConcreteOP3());
+                case "OP4": super.game.getStrategyMap().get(player).add(new ConcreteOP4());
+                case "OP5": super.game.getStrategyMap().get(player).add(new ConcreteOP5());
+                case "OP6": super.game.getStrategyMap().get(player).add(new ConcreteOP6());
+                case "OP7": super.game.getStrategyMap().get(player).add(new ConcreteOP7());
+                case "OP8": super.game.getStrategyMap().get(player).add(new ConcreteOP8());
+                case "OR1": super.game.getStrategyMap().get(player).add(new ConcreteOR1());
+                case "OR2": super.game.getStrategyMap().get(player).add(new ConcreteOR2());
+                case "OR3": super.game.getStrategyMap().get(player).add(new ConcreteOR3());
+                case "OR4": super.game.getStrategyMap().get(player).add(new ConcreteOR4());
+                case "OR5": super.game.getStrategyMap().get(player).add(new ConcreteOR5());
+                case "OR6": super.game.getStrategyMap().get(player).add(new ConcreteOR6());
+                case "OR7": super.game.getStrategyMap().get(player).add(new ConcreteOR7());
+                case "OR8": super.game.getStrategyMap().get(player).add(new ConcreteOR8());
+            }
+        }
+    }
+
+    /**
+     * This method iterates on players and for each of them fills the strategy map with concrete strategies and update his
+     * virtual points by calling the getPatternsTotemPoints game's method. This method is going to perform the search in the
+     * reduced matrix. Then the virtual points are summed to the virtual ones.
+     */
     private void matchEnded() {
         try {
-            List<Card> objCards = super.game.getBoard().getCommonObjectives();
-            Structure structure = null;
-            Integer points = 0;
-
+            int virtualPoints = 0;
             for (Player player : super.game.getPlayers()) {
-                objCards.add(super.game.getHandByPlayer(player).getSecretObjective());
-                structure = super.game.getStructureByPlayer(player);
-                for (Card card : objCards) {
-                    points += structure.getPointsFromObjResCard((ObjectiveCard) card);
-                }
-                super.game.getBoard().updateVirtualScore(player, points);
-                points = 0;
-                objCards.removeLast();
+                //fill player's strategy map
+                setStrategies(player);
+                //for each player compute the points made from patterns and from totems
+                virtualPoints += super.game.getPatternsTotemPoints(player, super.game.getStrategyMap());
+                //virtual points becomes actual
+                super.game.getBoard().updateActualScore(player, virtualPoints);
+                virtualPoints = 0;
             }
         } catch (Exception e) {
             super.game.throwException(e.getMessage());
         }
     }
 
+    /**
+     * This class updates the actual score from each player with the virtual points computed in MatchEnded and declare the winner,
+     * if there is a tie, the winner is the one with the most objective cards. If the tie remains there are multiple winners.
+     *
+     */
     private void declareWinner() {
         Integer max = 0;
         List<Player> currentWinner = new ArrayList<>();
         for (Player player : super.game.getPlayers()) {
-            if (game.getBoard().getVirtualPoints(player) > max) {
-                max = game.getBoard().getVirtualPoints(player);
+            Integer pointsByPlayerX = super.game.getBoard().getActualPoints(player);
+            if (pointsByPlayerX > max) {
+                max = pointsByPlayerX;
                 currentWinner.clear();
                 currentWinner.add(player);
-            } else if (game.getBoard().getVirtualPoints(player) == max) {
-                // TODO: add a player attribute for the amount of ObjectieCards realized
-                // if ( più obiettivi realizzati ){
-                // currentWinner.clear();
-                // currentWinner.add(player);
-                // }
-                // else if ( uguali ){
-                // currentWinner.add(player);
-                // }
-                // }
+            } else if (pointsByPlayerX.equals(max)) {
+                 if (super.game.getStructureByPlayer(player).getSatisfiedPatterns() > super.game.getStructureByPlayer(currentWinner.getFirst()).getSatisfiedPatterns()){
+                  currentWinner.clear();
+                  currentWinner.add(player);
+                 }
+                 else if (super.game.getStructureByPlayer(player).getSatisfiedPatterns() == super.game.getStructureByPlayer(currentWinner.getFirst()).getSatisfiedPatterns()){
+                 currentWinner.add(player);
+                 }
+                 }
                 if (currentWinner.size() == 1) {
-                    System.out.println("The winner is: " + currentWinner.get(0).getNickname());
+                    System.out.println("The winner is: " + currentWinner.getFirst().getNickname());
                 } else if (currentWinner.size() > 1) {
                     System.out.println("The winners are: ");
-                    for (int i = 0; i < currentWinner.size(); i++) {
-                        System.out.println(" " + currentWinner.get(i).getNickname());
+                    for (Player coWinner : currentWinner) {
+                        System.out.println(" " + coWinner.getNickname());
                     }
                 }
             }
-            // TODO: if there is a tie, the winner is the one with the most objective cards
-            // satisfied
-            // TODO: if there is still a tie, there are winners
         }
     }
-}
